--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -34,7 +34,7 @@
           autocomplete="off"
         />
         <button
-          type="submit"
+          type="button"
           class="btn btn-primary mt-1"
           onclick="sendMensaje(this)"
         >
